#67 prohibited input of text

--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -465,7 +465,7 @@
             </div> \
             \
             <input type="text" ' + ( via_button                   ? 'autofocus' : '') + ' id="value_name"  class="input_bm" placeholder="&nbsp; Enter the name of input value ..." style="text-align:center; background: transparent; border-radius: 25px; border: 2px solid #00ad5f; color:#00ad5f; width: 25%; font-size: 18px;font-family: Century Gothic; margin-right:2%; margin-left:2%; "> \
-            <input type="text" ' + (!via_button && num_input <= 1 ? 'autofocus' : '') + ' onchange="show_potential()" id="value_value" class="input_bm" placeholder="&nbsp; Value of input ..."      style="text-align:center; background: transparent; border-radius: 25px; border: 2px solid #00ad5f; color:#00ad5f; width: 15%; font-size: 18px;font-family: Century Gothic; margin-right:2%"> \
+            <input type="number" ' + (!via_button && num_input <= 1 ? 'autofocus' : '') + ' onchange="show_potential()" id="value_value" class="input_bm" placeholder="&nbsp; Value of input ..."      style="text-align:center; background: transparent; border-radius: 25px; border: 2px solid #00ad5f; color:#00ad5f; width: 15%; font-size: 18px;font-family: Century Gothic; margin-right:2%"> \
             <input type="text" id="note" class="input_bm" placeholder="&nbsp; Note ..." style="text-align:center; background: transparent; border-radius: 25px; border: 2px solid #00ad5f; color:#00ad5f; width: 25%; font-size: 18px;font-family: Century Gothic; margin-right:2%; "> \
             \
             <div class="select" style="border-bottom: 4px solid rgba(0,0,0, 0.12); border-right: 4px solid rgba(0,0,0, 0.12); margin-right: 5%"> \
