--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -355,24 +355,30 @@
     {
         // At first its undefined so set it as defined at the beginnning
         if(chart.data.datasets[bm_name.datasetIndex]['_meta'][0].hidden === false)
-            chart.data.datasets[bm_name.datasetIndex]['_meta'][0].hidden = true;
+            chart.data.datasets[bm_name.datasetIndex]['_meta'][0].hidden = false;   // At first it is always active, so set it to hidden true, which is active
         else
             ;
+
+        console.log(chart.data.datasets[bm_name.datasetIndex]['_meta'][0].hidden)
 
         if(chart.data.datasets[bm_name.datasetIndex]['_meta'][0].hidden)
         {
             console.log("was active, will set hidden")
-            chart.data.datasets[bm_name.datasetIndex]['_meta'][0].hidden = true;
+            chart.data.datasets[bm_name.datasetIndex]['_meta'][0].hidden = false;
+            document.getElementById("additional-info_" + (bm_name.datasetIndex + 1)).querySelector("#reps_box").checked = true;
         }
         else if(!chart.data.datasets[bm_name.datasetIndex]['_meta'][0].hidden)
         {
             console.log("was active, will set visible")
-            chart.data.datasets[bm_name.datasetIndex]['_meta'][0].hidden = false;
+            chart.data.datasets[bm_name.datasetIndex]['_meta'][0].hidden = true;
+            document.getElementById("additional-info_" + (bm_name.datasetIndex + 1)).querySelector("#reps_box").checked = false;
         }
 
         console.log(chart.data.datasets[bm_name.datasetIndex]['_meta'][0].hidden)
 
-        document.getElementById("additional-info_" + (bm_name.datasetIndex + 1)).querySelector("#reps_box").checked = false;
+        chart.update();
+
+        
     }
 
     function download() 
@@ -1405,6 +1411,7 @@
             options: {
                 
                 line:{ fill: true},
+                hidden: false,
                 ticks: {
                     beginAtZero: false,
                     min: 0,
