--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -185,8 +185,9 @@
     <div id="div-line-chart" style="position: relative; margin-top: 2.5%; height: 60vh;">
         <canvas id="line-chart" height="100"></canvas>
     </div>
+    <button id="clear-potential" onclick="closeNav(); clear_potential(true)" class="button" style="position: absolute; right: 0; margin-bottom: 4%" >Clear Potential <i class="fas fa-trash"></i></a> </button>
+    <button id="add-new-input" onclick="closeNav(); add_html_input(true)" class="button" style="width:20%; margin:auto;  display: table;margin: 0 auto; margin-bottom: 4%" >Add <i class="fas fa-plus-circle"></i></a> </button>
 
-    <button id="add-new-input" onclick="closeNav(); add_html_input(true)" class="button" style="width:20%; margin:auto; display:block; margin-bottom: 4%" >Add <i class="fas fa-plus-circle"></i></a> </button>
 
     <div id="container_bm">
        <!-- Here come all the dinamically created bms-->
