--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -771,6 +771,17 @@
         return to_dispay;
     }
 
+    // #67 newly added func
+    function clear_potential()
+    {
+        // Remove all datasets with the configured chart name
+        chart.data.datasets = chart.data.datasets.filter(function(obj) {
+            return (obj.label != 'potential_value_not_show_in_legend'); 
+        });
+
+        chart.update();   
+    }
+
     function getCookie(cname) {
         var name = cname + "=";
         var decodedCookie = decodeURIComponent(document.cookie);
