#67 started work on role management

--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -966,6 +966,8 @@
     {
         var roles = [];
 
+        console.log(assigned_roles);
+
         for(var i = 0; i < assigned_roles.length; i++)
         {
             if(assigned_roles[i] == 'paid_account' || assigned_roles[i] == 'friend_account')
