#67 fixed issue with potential not displaying when having only one bm

--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -875,6 +875,8 @@
                     local_labels_numbers.push(parsed_bm.length);
                 }
             }
+
+            local_labels_date.push("potential");
             
             if(document.getElementById("additional-info_" + (i + 1)).querySelector("#reps_box").checked)
             {
