#67 prototype for showing only relevant bms in tooltip

--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -1175,6 +1175,12 @@
                         }   
                     }
                 },
+                tooltips: {
+                    filter: function (tooltipItem, otheritem) {
+                        //console.log(tooltipItem, otheritem.datasets.length);
+                        return tooltipItem.datasetIndex === 0;
+                    }
+                },
                 scales: {
                     yAxes: [{
                         ticks: {
