#67 working showing only active bms and not potentials

--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -1176,9 +1176,9 @@
                     }
                 },
                 tooltips: {
-                    filter: function (tooltipItem, otheritem) {
-                        //console.log(tooltipItem, otheritem.datasets.length);
-                        return tooltipItem.datasetIndex === 0;
+                    filter: function (tooltipItem, otheritem) 
+                    {
+                        return !otheritem.datasets[tooltipItem.datasetIndex].label.includes("potential_value_number_")
                     }
                 },
                 scales: {
