--- a/frontend/index.html
+++ b/frontend/index.html
@@ -186,12 +186,12 @@
 
 <div id="mySidenav" class="sidenav">
     <button id="open-nav-button" onclick="closeNav()"                      class="button" style="float:right; float:top; margin-right: 10%; margin-bottom: 15%" ><i class="fas fa-bars"></i></a>
+    <button id="stats-button" onclick="window.location.href='stats.html'"  class="button" style="top: 10px; width:80%; margin-left: 10%; "><i class="fas fa-chart-line">       </i> Stats</button>
+    <button id="bm-button" onclick="window.location.href='bm_it.html'"     class="button" style="top: 10px; width:80%; margin-left: 10%;">                 <i class="fas fa-weight"></i>       </i> BM-IT</button>    
     <button onclick="receivePlanfromDB(false)"                             class="button" style="top: 10px; width:80%; margin-left: 10%; margin-top: 30px"><i class="fas fa-spinner">          </i> Load Plan</button>
     <button onclick="check_allowed_to_add_plan()"                          class="button" style="top: 10px; width:80%; margin-left: 10%;">                 <i class="fas fa-plus-circle">      </i> New Plan</button>
     <button onclick="delete_plan(-1, false)"                               class="button" style="top: 10px; width:80%; margin-left: 10%; margin-top: 20%;"><i class="fas fa-trash">            </i> Delete Plans</button>
     <button onclick="restore_plan(-1, false)"                              class="button" style="top: 10px; width:80%; margin-left: 10%;">                 <i class="fas fa-trash-restore-alt"></i> Restore Plans</button>
-    <button id="stats-button" onclick="window.location.href='stats.html'"  class="button" style="top: 10px; width:80%; margin-left: 10%; margin-top: 20%;"><i class="fas fa-chart-line">       </i> Stats</button>
-    <button id="bm-button" onclick="window.location.href='bm_it.html'"     class="button" style="top: 10px; width:80%; margin-left: 10%;">                 <i class="fas fa-weight"></i>       </i> BM-IT</button>
     <button id="logout-button" onclick="keycloak.logout()"                 class="button" style="top: 10px; width:80%; margin-left: 10%; margin-top: 20%;"><i class="fas fa-sign-out-alt">     </i> Logout</button>
     
 </div>
@@ -441,8 +441,8 @@
                 document.getElementById("stats-button").style.display = "inline";      // Add the stats button
             }
 
-            if(document.getElementById("stats-button").style.display == "none" && document.getElementById("bm-button").style.display == "inline")
-                document.getElementById("bm-button").style.marginTop = "20%";
+            // if(document.getElementById("stats-button").style.display == "none" && document.getElementById("bm-button").style.display == "inline")
+            //     document.getElementById("bm-button").style.marginTop = "20%";
         }
         
         // This part sets how many plans the user already has and then in check_allowed_to_add_plan it is checked if the user is allowed to add another one
