#67 fixed issue with two many labels showing

--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -1338,6 +1338,12 @@
                         ticks: {
                             beginAtZero: true
                         }
+                    }],
+                    xAxes: [{
+                        ticks: {
+                            autoSkip: true,
+                            autoSkipPadding: 8
+                        }
                     }]
                 },
                 responsive: true,
